# MiniGrid2Storm

./: .gitignore  README.md  delta_shield.py  environments.yaml  goal_state_envs.yaml  lavagap_2storm.py  logging_config.py  main.py  model.html  plotting.py  prob_lavagap2storm.py  prob_minigrid2storm.py  prob_model_checking.py  probabilistic_minigrids.py  pyproject.toml  quick_visualizations.ipynb  shield.py  simulations.ipynb  simulations.py  tests.py  training_RL_policies.ipynb  utils.py  visualisations.ipynb
core/: probabilistic_minigrids.py  shield.py
envs/: README.md  loader.py  registry.py
envs/configs/goal_state/: CrossingEnv.yaml  DistShiftEnv.yaml  FourRoomsEnv.yaml  LavaGapEnv.yaml  LockedRoomEnv.yaml  MultiRoomEnv.yaml  lavagap_small.yaml
envs/configs/no_goal_state/: BlockedUnlockPickupEnv.yaml  DoorKeyEnv.yaml  FetchEnv.yaml  (+7 more)
experiments/: README.md  callbacks.py  extra_plotting.py  feature_extractor.py  run_all_experiments.sh  smoke_test.py  train_multiple_envs_no_shield.py  train_multiple_envs_shield_gradual_reduction.py  train_multiple_envs_with_shield_instant_turn_off.py  train_utils.py
experiments/1.0/: callbacks.py  train_all_goal_state_envs.py  train_multiple_envs_fully_observable.py  train_multiple_envs_no_shield.py  train_multiple_envs_shield_gradual_reduction.py  train_multiple_envs_shield_slow_stop_deltas.py  train_multiple_envs_with_shield_instant_turn_off.py
experiments/scripts/: run_all_experiments.sh  train_multiple_envs_no_shield.py
experiments/tests/: smoke_test.py
policies/: README.md
utils/: action_utils.py  utils.py
(+161 files in other folders)
