[project]
name = "minigrid2storm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cairosvg>=2.8.2",
    "gymnasium>=1.2.0",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "minigrid>=3.0.0",
    "stable-baselines3>=2.7.1",
    "stormpy>=1.11.1",
    "stormvogel>=0.9.7",
]
